# math_matters

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: MathProcessor.h  Stack.h
src/: MathProcessor.cpp  Stack.h  Symbols.cpp  Symbols.h  input.hpp  main.cpp  tests.cpp
tests/: tests.cpp
